# Parallelism

./: CMake_Parallelism_Dz_1.cpp  Makefile.txt  README.md  Readme.txt
Parallelism_Dz_2/: TASK.docx
Parallelism_Dz_2/TASK_1/: GRAPH.py  TASK_1.c  makefile.txt  result.txt
Parallelism_Dz_2/TASK_2/: GRAPH.py  TASK_2.c  makefile.txt  result.txt
Parallelism_Dz_2/TASK_3/: GRAPH.py  TASK_3.cpp  makefile.txt  result.txt
Parallelism_Dz_5/: Dz_5.py
project/: CMakeLists.txt
